--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,12 @@ asgiref==3.5.2
 Django==4.1
 django-background-tasks==1.2.5
 django-compat==1.0.15
+django-environ==0.9.0
+mysqlclient==2.1.1
 Pillow==9.2.0
 psycopg2==2.9.3
 python-dotenv==0.21.0
 six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.2
-gunicorn==20.1.0
-whitenoise==5.3.0
+whitenoise==6.2.0
